--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY
 VITE_DEBUG=true
 VITE_API_BASE_URL=/api
-VITE_API_PROXY_TARGET=http://localhost:8000
+VITE_API_PROXY_TARGET=http://backend-2083237096:8000/
