--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "clerk-backend-api>=3.0.5",
     "fastapi>=0.115.14",
     "openai>=1.93.2",
+    "psycopg2>=2.9.10",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.41",
     "svix>=1.69.0",
