--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ clerk-backend-api>=3.0.5
 fastapi>=0.115.14
 openai>=1.93.2
 python-dotenv>=1.1.1
+psycopg2>=2.9.10
 sqlalchemy>=2.0.41
 svix>=1.69.0
 uvicorn>=0.35.0
